welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: '=' expected but identifier found.
def positionFinale():=Boolean = {
                    ^ZigZag:7: error: illegal start of simple expression
override def run() {
^