welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
def positionFinale():=Boolean = {
	if ((getX() == getMondeLargeur()-1) && (getY() == getMondeHauteur())){
		return true
	}
	return false
}
override def run() {
	var cpt=0
	for (i <- 1 to getMondeHauteur){
		for (i <- 1 to getMondeLargeur){
			ecritMessage(cpt)
			cpt=cpt+1
		}
	}
}
